--- a/sulaiman.html
+++ b/sulaiman.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IBRAHIM ABUBAKAR ug20icct1120</title>
+    <title>sulaiman ug20ict1102</title>
     <style>
      body{
         background-color: rgb(247, 185, 93);
